Fix spacing and styling

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -302,7 +302,7 @@ header h1 {
   padding-top: 5px;
 }
 
-p.strikethrough {
+.strikethrough {
   text-decoration: line-through;
 }
 
